Correctif bootstrap tooltip word-wrap

--- a/src/Plantnet/DataBundle/Resources/public/css/frontend/styles.less
+++ b/src/Plantnet/DataBundle/Resources/public/css/frontend/styles.less
@@ -184,6 +184,9 @@ div.popover-content{
 	overflow:hidden;
 	text-overflow:ellipsis;
 }
+div.tooltip-inner{
+	word-wrap:break-word;
+}
 
 
 // Collection : Presentation
