--- a/src/Plantnet/DataBundle/Resources/public/css/frontend_2/styles.less
+++ b/src/Plantnet/DataBundle/Resources/public/css/frontend_2/styles.less
@@ -193,6 +193,9 @@ div.popover-content{
 	overflow:hidden;
 	text-overflow:ellipsis;
 }
+div.tooltip-inner{
+	word-wrap:break-word;
+}
 
 
 // Collection : Presentation
